--- a/app/containers/Home/Home.scss
+++ b/app/containers/Home/Home.scss
@@ -1,3 +1,8 @@
 .Home {
     font-family: 'Helvetica';
+    margin-top: 40px;
+
+    @media (max-width: 425px) {
+        margin-top: 80px;
+    }
 }
